Modernization post java 9, correct some dreprecation.